# bitbucket-tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: LEDGER.md  authentication.md  design.md
docs/specs/: M0.md  M1.md  M10.md  M2.md  M3.md  M5.md  M6.md  M7.md  M9.md
src/: auth.rs  config.rs  logging.rs  main.rs
src/api/: client.rs  error.rs  mod.rs  models.rs
src/tui/: app.rs  diff.rs  event.rs  imageview.rs  logview.rs  mod.rs  onboarding.rs  richdoc.rs  theme.rs  ui.rs
