[package]
name = "bitbucket-tui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native"] }
directories = "6"
toml = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
tui-markdown = "0.3.8"
ratatui-image = { version = "11.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
nucleo-matcher = "0.3.1"
# ratatui-image が内部で使う ratatui のバージョン（^0.30.1）は本クレートの ratatui（0.29）と
# 互換性が無く（`cargo tree` で別インスタンスとして解決される）、StatefulImage/Image ウィジェット
# は直接使えない（詳細は src/tui/imageview.rs 冒頭のコメント）。そのため画像デコード用途のみに
# `image` を名前付き依存として追加する（版・feature は vendor/image/Cargo.toml の 0.25.10 に一致。
# ratatui-image の `image-defaults` feature が既に `image/default` を有効化しているため、この追加
# 自体は解決される features を増減させない＝offline のまま `cargo build --offline` が通る）。
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
] }
