[package]
name = "bitbucket-tui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
toml = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
tui-markdown = "0.3.8"
ratatui-image = "8.1.1"
nucleo-matcher = "0.3.1"
unicode-segmentation = "1"
unicode-width = "0.2"
# ratatui-image は 8.1.1 に固定する（ratatui 0.29 互換の最新版。9.0 以降は内部 ratatui が
# ^0.30 になり本クレートの ratatui と型非互換＝StatefulImage が使えなくなる。本体の ratatui を
# 0.30 系へ上げるときに合わせて更新する）。`image` は画像デコード（取得 bytes → DynamicImage）を
# 本クレートから直接呼ぶための名前付き依存（版は vendor 済みの 0.25.10 に一致。ratatui-image の
# `image-defaults` feature が既に `image/default` を有効化しているため、この追加は解決される
# features を増減させない＝offline のまま `cargo build --offline` が通る）。
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
] }
# libloading は Linux の Secret Service(libsecret)を実行時 dlopen で呼ぶための依存(cargo 公式の
# cargo-credential-libsecret と同方式)。ビルド時リンクや zbus 系の重い依存を避ける。target 依存に
# せず通常依存にしているのは意図的: libsecret バックエンドのモジュールを全 OS でコンパイル対象に
# して、macOS 上の check/clippy/test でも Linux 向けコードの大半を検証できるようにするため
# (dlopen は実行時にしか起きないので macOS ビルドに実害はない)。
libloading = "0.8"
